Bigger refactoring of the benchmark scripts to a) Give Every DBMS its own RAM settings b) bzip and unbzip the testdata to save disk space (which is rare on the test system c) Adapt the shell script to a real linux and make it run more stable